--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Penis"
+        android:text="Nada"
         android:id="@+id/text_dialog"
         android:layout_below="@+id/a"
         android:layout_marginTop="20dp"
